Added Apache-2.0 license, fixed some bugs, made the support code for controllers, started on Security Area

--- a/OpenLawOffice.Server/OpenLawOffice.Server.Core/OpenLawOffice.Server.Core.csproj
+++ b/OpenLawOffice.Server/OpenLawOffice.Server.Core/OpenLawOffice.Server.Core.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>OpenLawOffice.Server.Core</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -158,6 +158,9 @@
       <Project>{042206B5-2D13-42E0-B1B9-30254952BACA}</Project>
       <Name>OpenLawOffice.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
