--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/packages.config
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoMapper" version="2.2.1" targetFramework="net40" />
   <package id="AvalonDock" version="2.0.1746" targetFramework="net40-Client" />
   <package id="Extended.Wpf.Toolkit" version="1.9.0" targetFramework="net40-Client" />
+  <package id="NLog" version="2.0.1.2" targetFramework="net40" />
   <package id="RestSharp" version="104.1" targetFramework="net40-Client" />
   <package id="ServiceStack" version="3.9.37" targetFramework="net40-Client" />
   <package id="ServiceStack.Common" version="3.9.37" targetFramework="net40-Client" />
