Moved away from trying to keep Models and ViewModels synchronized and just made static Create and UpdateModel methods to come from model to view model and vice versa respectively, fixes #5

--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/OpenLawOffice.WinClient.csproj
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/OpenLawOffice.WinClient.csproj
@@ -183,12 +183,15 @@
     <Compile Include="ErrorHandling\LevelType.cs" />
     <Compile Include="ErrorHandling\NotificationError.cs" />
     <Compile Include="Globals.cs" />
-    <Compile Include="ViewModels\CoreModel.cs" />
-    <Compile Include="ViewModels\IHierarchicalModel.cs" />
+    <Compile Include="ViewModels\Creator.cs" />
+    <Compile Include="ViewModels\UnboundModelException.cs" />
+    <Compile Include="ViewModels\ViewModelCore.cs" />
+    <Compile Include="ViewModels\IHierarchicalView.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
-    <Compile Include="ViewModels\ModelBase.cs" />
+    <Compile Include="ViewModels\StateType.cs" />
+    <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="ViewModels\ModelWithDatesOnly.cs" />
+    <Compile Include="ViewModels\ViewModelWithDatesOnly.cs" />
     <Compile Include="ViewModels\Security\Area.cs" />
     <Compile Include="ViewModels\Security\AreaAcl.cs" />
     <Compile Include="ViewModels\Security\SecuredResource.cs" />
