Reworked controllers including some rest containers and fixed #8.

--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/OpenLawOffice.WinClient.csproj
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/OpenLawOffice.WinClient.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Consumers\Security\User.cs" />
     <Compile Include="ControllerManager.cs" />
     <Compile Include="Controllers\ControllerBase.cs" />
+    <Compile Include="Controllers\MasterDetailControllerCore.cs" />
     <Compile Include="Controllers\HandleAttribute.cs" />
     <Compile Include="Controllers\MasterDetailController.cs" />
     <Compile Include="Controllers\Security\AreaAcl.cs" />
