--- a/OpenLawOffice.Server/OpenLawOffice.Server.Core/packages.config
+++ b/OpenLawOffice.Server/OpenLawOffice.Server.Core/packages.config
@@ -1,11 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="2.2.1" targetFramework="net40" />
+  <package id="AutoMapper" version="3.0.0" targetFramework="net40" />
   <package id="Npgsql" version="2.0.12.1" targetFramework="net40" />
   <package id="ServiceStack" version="3.9.38" targetFramework="net40" />
+  <package id="ServiceStack" version="3.9.66" targetFramework="net40" />
   <package id="ServiceStack.Common" version="3.9.38" targetFramework="net40" />
+  <package id="ServiceStack.Common" version="3.9.66" targetFramework="net40" />
   <package id="ServiceStack.OrmLite.PostgreSQL" version="3.9.39" targetFramework="net40" />
+  <package id="ServiceStack.OrmLite.PostgreSQL" version="3.9.66" targetFramework="net40" />
   <package id="ServiceStack.OrmLite.SqlServer" version="3.9.39" targetFramework="net40" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="3.9.66" targetFramework="net40" />
   <package id="ServiceStack.Redis" version="3.9.38" targetFramework="net40" />
+  <package id="ServiceStack.Redis" version="3.9.66" targetFramework="net40" />
   <package id="ServiceStack.Text" version="3.9.38" targetFramework="net40" />
+  <package id="ServiceStack.Text" version="3.9.66" targetFramework="net40" />
 </packages>
