--- a/OpenLawOffice.Server/OpenLawOffice.Server.Core/OpenLawOffice.Server.Core.csproj
+++ b/OpenLawOffice.Server/OpenLawOffice.Server.Core/OpenLawOffice.Server.Core.csproj
@@ -102,26 +102,36 @@
     <Compile Include="DBOs\Core.cs" />
     <Compile Include="DBOs\DboBase.cs" />
     <Compile Include="DBOs\DboWithDatesOnly.cs" />
+    <Compile Include="DBOs\Matters\Matter.cs" />
+    <Compile Include="DBOs\Matters\MatterTag.cs" />
+    <Compile Include="DBOs\Matters\ResponsibleUser.cs" />
     <Compile Include="DBOs\NullDbo.cs" />
     <Compile Include="DBOs\Security\AreaAcl.cs" />
     <Compile Include="DBOs\Security\Area.cs" />
     <Compile Include="DBOs\Security\SecuredResource.cs" />
     <Compile Include="DBOs\Security\SecuredResourceAcl.cs" />
     <Compile Include="DBOs\Security\User.cs" />
+    <Compile Include="DBOs\Tagging\TagBase.cs" />
+    <Compile Include="DBOs\Tagging\TagCategory.cs" />
     <Compile Include="Host.cs" />
     <Compile Include="Installation\Database.cs" />
     <Compile Include="InvalidObjectException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rest\Requests\IHasSession.cs" />
+    <Compile Include="Rest\Requests\Matters\Matter.cs" />
+    <Compile Include="Rest\Requests\Matters\MatterTag.cs" />
     <Compile Include="Rest\Requests\Security\AreaAcl.cs" />
     <Compile Include="Rest\Requests\Security\Area.cs" />
     <Compile Include="Rest\Requests\Security\Authentication.cs" />
     <Compile Include="Rest\Requests\Security\SecuredResource.cs" />
     <Compile Include="Rest\Requests\Security\SecuredResourceAcl.cs" />
     <Compile Include="Rest\Requests\Security\User.cs" />
+    <Compile Include="Rest\Requests\Tagging\TagCategory.cs" />
     <Compile Include="Security\Authorize.cs" />
     <Compile Include="Security\AuthorizeResult.cs" />
     <Compile Include="Security\Session.cs" />
+    <Compile Include="Services\Matters\Matter.cs" />
+    <Compile Include="Services\Matters\MatterTag.cs" />
     <Compile Include="Services\ResourceBase.cs" />
     <Compile Include="Services\Security\Area.cs" />
     <Compile Include="Services\Security\AreaAcl.cs" />
@@ -131,6 +141,7 @@
     <Compile Include="Services\Security\SecuredResourceAcl.cs" />
     <Compile Include="Services\Security\User.cs" />
     <Compile Include="Services\ServiceBase.cs" />
+    <Compile Include="Services\Tagging\TagCategory.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Singleton.cs" />
   </ItemGroup>
@@ -168,6 +179,7 @@
   <ItemGroup>
     <Content Include="LICENSE.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
